# bluehen

./: .dockerignore  .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EVIDENCE.md  EXPERIMENT_CAMPAIGN_REPORT.md  HANDOFF.md  LICENSE  PLAN.md  README.md  SCIENCE_REVIEW.md  SECURITY.md  SWEEP_FINDINGS.md  SWEEP_REPORT.md  TASKS.md  WHITEPAPER.md  dashboard.html  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  program.md  pyproject.toml  railway.commerce.toml  railway.toml  railway.worker.toml  vercel.json
.claude/: CLAUDE.md  TEAM.md  autoresearch-delegate.md
.cursor/: hooks.json  mcp.json
.github/: pull_request_template.md
config/: agent_teams.json  agents.json  arxiv_watch_queries.json  datalab_sources.json  experiment_hypotheses.json  fleet.json  kits.json  literature_registry.json  market-platforms.json  org-divisions.json  research_backlog.json  work_queue.json
docs/: AGENT_INIT.md  AUTO-101-RUNBOOK.md  CONSULTING_ENGAGEMENT.md  DESIGN_SYSTEM.md  EXECUTIVE_ROADMAP.md  EXPERIMENT_STRATEGY.md  FRONTIER_ARCHITECTURE.md  OMNI_MARKET_ARCHITECTURE.md  OPENCODE_LOOP.md  ORCHESTRATION.md  PMF_ICP.md  POSITIONING.md  README.md  RESEARCH_ORG_ROADMAP.md  RESEARCH_TO_MARKET.md  SITE_ARCHITECTURE.md  SOURCE_MAP.md  STATUS.md  SYSTEM_DESIGN_REVIEW.md  ULTRACODE_WORKFLOW.md  VOICE_AND_CIRCUIT.md  (+1 more)
services/core-api/: VERIFICATION_REPORT.md  alembic.ini  pyproject.toml
services/core-api/alembic/: env.py
services/core-api/alembic/versions/: 001_initial.py  002_pgvector_chunks.py  003_tenant_role.py  004_workspace_rls.py  005_tenant_sequences.py  006_workspace_budget_update.py  007_leads.py  008_model_artifact.py  009_refinery_catalog.py  010_wiki_pages.py  011_usage_events.py  012_tenant_grants.py  013_cert_submissions.py  014_dataset_entitlements.py  014_entitlements.py  015_dataset_entitlements.py  016_dataset_ent_grant.py  017_usage_daily.py  018_wiki_description.py  019_meta_contracts.py
services/core-api/app/: auth.py  config.py  database.py  errors.py  main.py  models.py  ratelimit.py
services/core-api/app/services/: admin.py  artifacts.py  billing.py  catalog.py  certify.py  contracts.py  corpus_upload.py  data.py  diagnose.py  entitlements.py  eval.py  exhaust.py  filters.py  game_labels.py  governance.py  handoffs.py  harvest.py  indexing.py  jobs.py  lifecycle.py  models_svc.py  omni.py  queueing.py  rank.py  rank_explain.py  recommend.py  search.py  signup.py  telemetry.py  usage.py  wiki.py  wiki_ask.py
services/core-api/tests/: conftest.py  test_catalog_download.py  test_contracts.py  test_corpus_upload.py  test_diagnose.py  test_eval.py  test_filters.py  test_handoffs.py  test_leads.py  test_omni.py  test_rank.py  test_rank_explain.py  test_rls.py  test_serving_tiers.py  test_telemetry.py  test_workspaces.py
services/trainer/: README.md  modal_app.py  pyproject.toml  trace.py
services/trainer/tests/: conftest.py  test_modal_app.py
(+724 files in other folders)
