[project]
name = "synthaembed-core-api"
version = "0.1.0"
description = "The single uniform chokepoint: all agents/CLI/UI reach every service and db here."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
db = ["sqlalchemy>=2.0", "psycopg[binary]>=3.2", "pgvector>=0.3", "alembic>=1.13"]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
