[project]
name = "synthaembed-trainer"
version = "0.1.0"
description = "Modal serverless GPU pipeline: collect -> train/validate -> applied-test -> deploy"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64",
    "torch>=2.2",
    "numpy>=1.26",
    "transformers>=4.44",
    "tokenizers>=0.19",
    "asn-engine",
]

[tool.uv.sources]
asn-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
